welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:2: error: object void is not a member of package public
public void run() {
       ^Array1:2: error: Unit does not take parameters
public void run() {
                  ^